istio/hw2/chuck-app.yaml
##################################################################################################
# Chuck UI
##################################################################################################
# v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-ui-v1
  labels:
    app: chuck-ui-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chuck-ui
        version: "1.0"
        serving: "true"
    spec:
      containers:
        - name: chuck-ui
          image: sbishyr/chuck-ui:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
  selector:
    matchLabels:
      app: chuck-ui
      version: "1.0"
      serving: "true"
---
# v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-ui-v2
  labels:
    app: chuck-ui-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chuck-ui
        version: "2.0"
        serving: "true"
    spec:
      containers:
        - name: chuck-ui
          image: sbishyr/chuck-ui:2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
  selector:
    matchLabels:
      app: chuck-ui
      version: "2.0"
      serving: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: chuck-ui
  labels:
    app: chuck-ui
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: chuck-ui
    serving: "true"
---
# UI destination rule
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chuck-ui
spec:
  host: chuck-ui
  subsets:
  - name: v1
    labels:
      serving: "true"
      version: "1.0"
  - name: v2
    labels:
      serving: "true"
      version: "2.0"
---
# UI routing
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chuck-joke-ui-routing
spec:
  hosts:
    - chuck-ui
  http:
    - match:
      - headers:
          user-agent:
            regex: ".*Chrome.*"
      route:
        - destination:
            host: chuck-ui
            subset: v1
            port:
              number: 3000
      fault:
        delay:
          fixedDelay: 5s
          percentage:
            value: 100

    # - match:
    - route:
        - destination:
            host: chuck-ui
            subset: v2
            port:
              number: 3000

      # fault:
      #   delay:
      #     fixedDelay: 3s
      #     percentage:
      #       value: 100
---
##################################################################################################
# Chuck Joke Service
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-joke-service
  labels:
    app: chuck-joke-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: chuck-joke-service
        version: "1.0"
        serving: "true"
    spec:
      containers:
        - name: chuck-joke-service
          image: sbishyr/chuck-joke-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
  selector:
    matchLabels:
      app: chuck-joke-service
      version: "1.0"
      serving: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: chuck-joke-service
  labels:
    app: chuck-joke-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: chuck-joke-service
    serving: "true"
